--- a/CHANGELOG
+++ b/CHANGELOG
@@ -11,6 +11,10 @@ The format is based on [Keep a Changelog](http://keepachangelog.com/)
 and this project adheres to [Semantic Versioning](http://semver.org/).
 
 
+## 0.0.1-alpha.06
+ADDED:
+－ 增加i18n支持
+
 ## 0.0.1-alpha.05
 ADDED:
 － injectComponent 支持
