--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,9 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](http://keepachangelog.com/)
 and this project adheres to [Semantic Versioning](http://semver.org/).
 
+## 0.1.0
+ADDED:
+－ 修改 inject 方式
 
 ## 0.0.1-alpha.06
 ADDED:
