--- a/i18n/en_US/global.json
+++ b/i18n/en_US/global.json
@@ -2,6 +2,7 @@
    "sidebar": "Access URL",
    "port": "Port",
    "generate": "Generate",
+   "refresh": "Refresh",
    "handleDelete": {
       "header": "Are you sure to delete this port?",
       "message": "You're trying to delete port {port}",
