--- a/i18n/zh_CN/global.json
+++ b/i18n/zh_CN/global.json
@@ -14,7 +14,8 @@
       "deleteFailed": "删除失败: {msg}",
       "deleteSuccess": "删除成功!",
       "saveFailed": "永久化失败: {msg}",
-      "saveSuccess": "永久化成功!"
+      "saveSuccess": "永久化成功!",
+      "memberInfo": "只有钻石会员才能生成永久链接"
    },
    "neverExpires": "永不过期",
    "permanent": "转为永久",
