fix test propose

--- a/i18n/zh_CN/global.json
+++ b/i18n/zh_CN/global.json
@@ -1,9 +1,9 @@
 {
    "sidebar": "访问链接",
    "port": "端口",
-   "generate": "生成",
+   "generate": "创建链接",
    "refresh": "刷新",
-   "description": "访问链接可为应用程序创建一个供外部访问的链接，创建访问链接前，请在终端（Terminal）中将需要被访问的应用程序端口映射到0.0.0.0地址。",
+   "description": "访问链接可为应用程序创建一个供外部访问的链接，创建访问链接前，请在终端（Terminal）中将需要被访问的应用程序端口映射到 0.0.0.0 地址。",
    "help": "查看帮助",
    "handleDelete": {
       "header": "你确定删除此端口吗",
