--- a/i18n/en_US/global.json
+++ b/i18n/en_US/global.json
@@ -1,7 +1,7 @@
 {
    "sidebar": "Access URL",
    "port": "Port",
-   "generate": "Generate",
+   "generate": "Generate URL",
    "refresh": "Refresh",
    "description": "Access links create a link for external access for your application. Before you create an access link, map the application port you want to access to address 0.0.0.0 in the terminal. ",
    "help": "View help",
