--- a/i18n/zh_CN/global.json
+++ b/i18n/zh_CN/global.json
@@ -19,7 +19,7 @@
       "copyFailed": "复制失败!",
       "saveFailed": "永久化失败: {msg}",
       "saveSuccess": "永久化成功!",
-      "memberInfo": "只有钻石会员才能生成永久链接"
+      "memberInfo": "只有黄金会员以上才能生成永久链接"
    },
    "neverExpires": "永不过期",
    "permanent": "转为永久",
